# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_logging",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0")

# Rust rules for Bazel
bazel_dep(name = "rules_rust", version = "0.63.0")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.1")

# LLVM Toolchains Rules - host configuration
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    cxx_standard = {"": "c++17"},
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

# tooling
# TODO: score_tooling does not have a single release yet. It's not in the registry.
#bazel_dep(name = "score_tooling", version = "1.0.1")
git_override(
    module_name = "score_tooling",
    remote = "https://github.com/etas-contrib/score_tooling.git",
    # 2025-10-21
    commit = "2a02497316a2150e20e20f0d0974b986ee179213",
)
bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

# TODO: docs-as-code does not have a single release yet. It's not in the registry.
#bazel_dep(name = "score_docs_as_code", version = "1.1.0")
git_override(
    module_name = "score_docs_as_code",
    remote = "https://github.com/etas-contrib/score_docs-as-code.git",
    # 2025-10-21
    commit = "064c9a05b8ba45d9e83f7940a3aed301a23cd510",
)
